# splitrix-algorand

./: .algokit.toml  README.md  splitrix-algorand.code-workspace
.algokit/: .copier-answers.yml
projects/splitrix-algorand-backend/: .env.sample  NOTES.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  pyproject.toml
projects/splitrix-algorand-backend/prisma/: schema.prisma
projects/splitrix-algorand-backend/prisma/migrations/20251113203458_init/: migration.sql
projects/splitrix-algorand-backend/prisma/migrations/20251115213815_create_friends_table/: migration.sql
projects/splitrix-algorand-backend/scripts/: reset-db.ts
projects/splitrix-algorand-backend/src/: index.ts  main.py
projects/splitrix-algorand-backend/src/api/: server.ts
projects/splitrix-algorand-backend/src/config/: index.ts
projects/splitrix-algorand-backend/src/contract/: index.ts
projects/splitrix-algorand-backend/src/db/: database.py  settings.py
projects/splitrix-algorand-backend/src/indexer/: blockProcessor.ts  chainClient.ts  eventParser.ts  logger.ts  worker.ts
projects/splitrix-algorand-backend/src/models/: models.py
projects/splitrix-algorand-backend/src/schemas/: schemas.py
projects/splitrix-algorand-backend/src/scripts/: demo.py
projects/splitrix-algorand-backend/src/services/: analyticsService.ts  balancesService.ts  billService.ts  friendService.ts  groupService.ts  helperService.ts
projects/splitrix-algorand-backend/src/subscriber/: subscriber.py
projects/splitrix-algorand-backend/src/utils/: box.py  main.py  safeJson.ts  splitrix_client.py
(+89 files in other folders)
