[tool.poetry]
name = "splitrix-algorand-backend"
version = "0.1.0"
description = "Splitrix Algorand Backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
algokit-subscriber = "^1.0.1"
algosdk = "^2.2.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
algokit-utils = "^4.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
